--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -1,9 +1,41 @@
-<div style="text-align: center">
-  <h1>Welcome to dashboard!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-    alt="Nx - Smart, Fast and Extensible Build System"
-  />
-</div>
-<div>Message: {{ hello$ | async | json }}</div>
+<mat-toolbar color="primary" class="mat-elevation-z4">
+  <span>
+    <button mat-mini-fab  (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </span>
+  <span class="spacer"></span>
+  <span>
+    <h2>Nacho Mecánico</h2>
+  </span>
+  <span class="spacer"></span>
+  <button class="login"mat-mini-fab>
+    <mat-icon>person</mat-icon>
+  </button>
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav [opened]="true" mode="side" class="app-sidenav">
+    <ng-container>
+      <span class="sidenav-title">
+        <h3>Administrador</h3>
+      </span>
+
+      <mat-divider></mat-divider>
+      <mat-nav-list>
+        <mat-list-item
+          *ngFor="let menuItem of navigation"
+          [routerLink]="menuItem.path"
+          routerLinkActive="active"
+        >
+          <mat-icon matListIcon>{{ menuItem.icon }}</mat-icon>
+          {{ menuItem.title | uppercase }}
+        </mat-list-item>
+      </mat-nav-list>
+    </ng-container>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
