Set a working CRUD for Mechanic services

--- a/apps/dashboard/src/app/pages/mechanic-service-page/mechanic-service-page.component.html
+++ b/apps/dashboard/src/app/pages/mechanic-service-page/mechanic-service-page.component.html
@@ -26,7 +26,7 @@
   <mat-card id="service-detail">
     <mat-card-title>
       <span *ngIf="selectedService.id; else elseBlock">
-        Editando {{ selectedService.name }}
+        Editando {{ originalName }}
       </span>
       <ng-template #elseBlock>
         Selecciona un Servicio
