--- a/apps/dashboard/src/app/shared/mechanic-services/mechanic-services-detail/mechanic-services-detail.component.html
+++ b/apps/dashboard/src/app/shared/mechanic-services/mechanic-services-detail/mechanic-services-detail.component.html
@@ -12,7 +12,7 @@
       <mat-form-field class="full-width">
         <input
           matInput
-          placeholder="Title"
+          placeholder="Nombre"
           [(ngModel)]="_service.name"
           type="text"
           name="title"
@@ -21,7 +21,7 @@
       <mat-form-field class="full-width">
         <input
           matInput
-          placeholder="Description"
+          placeholder="Descripción"
           [(ngModel)]="_service.description"
           type="text"
           name="description"
