--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -1,19 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z4">
-  <span>
-    <button mat-mini-fab  (click)="sidenav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-  </span>
-  <span class="spacer"></span>
-  <span>
-    <h2>Nacho Mecánico</h2>
-  </span>
-  <span class="spacer"></span>
-  <button class="login"mat-mini-fab>
-    <mat-icon>person</mat-icon>
-  </button>
-</mat-toolbar>
-
+<dev-toolbar (toogle)="sidenav.toggle()"></dev-toolbar>
 <mat-sidenav-container>
   <mat-sidenav #sidenav [opened]="true" mode="side" class="app-sidenav">
     <ng-container>
