--- a/libs/common-ui/src/lib/layouts/toolbar/toolbar.component.html
+++ b/libs/common-ui/src/lib/layouts/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
   <span>
-    <button mat-mini-fab  (click)="toggle.emit(true)">
+    <button mat-mini-fab  (click)="toolbarToggle.emit(true)">
       <mat-icon>menu</mat-icon>
     </button>
   </span>
