fix selection issue

--- a/apps/clients/src/app/pages/our-services-page/our-services-page.component.html
+++ b/apps/clients/src/app/pages/our-services-page/our-services-page.component.html
@@ -4,6 +4,7 @@
   (selected)="selectService($event)"
 ></dev-mechanic-service-grid-cards>
 
-<ng-container *ngIf="(selectedService$ | async) || false">
-  Selected {{(selectedService$ | async)?.name }}
+<ng-container *ngIf="(selectedService$ | async) && _selectedService">
+    Selected {{_selectedService.name }}
 </ng-container>
+
